' Alt + D : Visualiser le diagramme
'
' Question pour le professeur
' ---------------------------
' Le cas 3 presente ces informations comme faisant partie de la fiche.
' Le schema les rend donc obligatoires. Les XML fournis omettent
' parfois la balise (elle est absente, pas vide). Faut-il garder
' l'obligation des cas d'utilisation, quitte a rejeter ces lignes,
' ou rendre ces elements optionnels pour accepter tout le jeu de donnees ?
'
' Personnes (personnes_latin1.xml) : 4549 fiches, balise <nom> toujours presente.
'   <photo> absente : 2118. Ex. Jin Auyeung (id 1266102), Fred Rogers (id 736872).
'   <bio> absente : 2410. Ex. Hilary Labow (id 479640), Miguel Sandoval (id 762153).
'   <anniversaire> absent : 793. Ex. Hilary Labow (id 479640), Lewis Abernathy (id 8656).
'   <lieu> absent : 667. Ex. Hilary Labow (id 479640), Lewis Abernathy (id 8656).
'   Le cas 3 demande date de naissance, lieu, photo et biographie.
'
' Films (films_latin1.xml) : 631 fiches. Pays et genres toujours presents (au moins 1).
'   Pas de <realisateur> : 1 film. King Kong, 1933 (id 24216).
'     Le cas 3 demande le nom du realisateur (multiplicite 1).
'   Pas de <scenariste> : 1 film. Brief Encounter, 1945 (id 37558).
'     Le cas 3 demande le nom de tous les scenaristes (multiplicite 1..*).
'   Pas de <role> : 5 films.
'     Fahrenheit 9/11 (id 361596), Double Jeopardy (id 150377),
'     It Happened One Night (id 25316), The Bridge on the River Kwai (id 50212),
'     Hotaru no haka (id 95327).
'     Le cas 3 demande les acteurs et leurs personnages (multiplicite 1..*).
'   Pas de <langue> : 4 films.
'     Sunrise: A Song of Two Humans (id 18455), The General (id 17925),
'     The Kid (id 12349), City Lights (id 21749).
'   Pas de <poster> : 2 films.
'     (500) Days of Summer (id 1022603), Who's Afraid of Virginia Woolf? (id 61184).
'     Le cas 3 demande la langue originale et l'affiche.
'
'
' Clients (clients_latin1.xml) : 21550 fiches, tous les champs d'abonnement sont presents.
'   Le CVV n'est dans aucun XML. Ce point est deja tranche par l'enonce (tache 4,
'   consigne 8) : le generer ou le laisser vide. Ce n'est pas la question ci-dessus.

@startuml WebflixSchemaConceptuel
title Webflix — Schéma conceptuel (Tâche 1, Labo 1, LOG660)

skinparam classAttributeIconSize 0
hide empty methods

' ===================== UTILISATEURS DU SYSTÈME =====================
abstract class Utilisateur {
  nomFamille : String [1]
  prenom : String [1]
  courriel : String [1]
  telephone : String [1]
  dateNaissance : Date [1]
  motDePasse : String [1]
}

Utilisateur "1" *-- "1" Adresse
class Adresse {
  numeroCivique : String [1]
  rue : String [1]
  ville : String [1]
  province : String [1]
  codePostal : String [1]
}

' Specialisation disjointe et complete : un utilisateur est soit un client, soit un employe.
Utilisateur <|-- Client
Utilisateur <|-- Employe
note bottom of Utilisateur
  Generalisation {disjointe, complete}
end note

class Client

Client "1" *-- "1" CarteCredit
class CarteCredit {
  type : String [1]
  numero : String [1]
  dateExpiration : Date [1]
  cvv : String [1]
}

class Employe {
  matricule : String [1]
}

Client "0..*" -- "1" Forfait : souscrit à
class Forfait {
  code : String [1]
  cout : Decimal [1]
  locationsMax : Integer [1]
  dureeMaxJours : Integer [0..1]
}



' ===================== CATALOGUE DE FILMS =====================
class Film {
  titre : String [1]
  anneeSortie : Integer [1]
  dureeMinutes : Integer [1]
  langueOriginale : String [1]
  resume : String [1]
  urlAffiche : String [1]
  lienBandeAnnonce : String [0..*]
}

Film "0..*" -- "1..*" Genre : classé dans
class Genre {
  nom : String [1]
}

Film "0..*" -- "1..*" Pays : produit dans
class Pays {
  nom : String [1]
}

Film "0..*" -- "1" Personne : réalisé par
Film "0..*" -- "1..*" Personne : écrit par
class Personne {
  nom : String [1]
  dateNaissance : Date [1]
  lieuNaissance : String [1]
  photo : String [1]
  biographie : String [1]
}

Film "1" -- "1..*" Interpretation : comporte
Personne "1" -- "0..*" Interpretation : joue
class Interpretation {
  nomPersonnage : String [1]
}



' ===================== INVENTAIRE ET LOCATIONS =====================
Film "1" *-- "1..*" Copie
class Copie {
  codeCopie : String [1]
}

Client "1" -- "0..*" Location : effectue
Copie "1" -- "0..*" Location : fait l'objet de
class Location {
  dateLocation : Date [1]
  dateRetour : Date [0..1]
}



@enduml